<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FragmentsHW</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome!</string>
    <string name="name">Name</string>
    <string name="course">Course</string>
    <string name="specialty">Specialty</string>
    <string name="facultyNum">Faculty Number</string>
    <string name="register">Register</string>

</resources>